Desenvolvimento teste da minha pagina

--- a/index.html
+++ b/index.html
@@ -1,11 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>#1 Game JavaScript</title>
 </head>
+
 <body>
+    <!--Title-->
+    <summary>
+        <h1 style="display: inline-block"> Hello World 👋🏾</h1>
+    </summary>
+    <hr>
+
+
+    <!--Presentation -->
+    <p>
+    <ul>
+        👨🏾‍🎓 I'm Neri, a games enthusiast on the journey to becoming a developer
+    </ul>
+    <ul>
+        📚 I'm currently learning JavaScript, Python.
+    </ul>
+    <ul>
+        🔭 I'm looking for my first job opportunity. My dream is to one day work
+        in game development.
+    </ul>
+    <ul>
+        📫 How to reach me contatoneri00@gmail.com.
+    </ul>
+    <ul>
+        <!--Dropdown-->
+        <details>
+            <summary>
+                👨🏾‍💻 More about me
+            </summary>
+            <p>I currently live in Brazil, love technology and I'm studying systems
+                development with the ultimate goal of developing games. I'm very
+                communicative and love working as part of a team, solving problems and
+                creating projects. I have a basic knowledge of English A1/A2, but I'm
+                passionate about languages and cultures and I want to learn and improve
+                more and more.</p>
+            <p>⚡ I enjoy reading, whether it's a good book, manga, or comics and playing
+                games! I believe that our personal interests contribute to a more refined
+                perception of things and problem-solving. ^_^</p>
+    </ul>
+    </p>
+    <!--Links-->
+
+
+    <!--Portfolio-->
+
+
+    <!--SKills-->
+
+    <!--Programming Language-->
+
     
+    <!--Tools & Frameworks-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
