Desenvolvimento da minha pagina

--- a/index.html
+++ b/index.html
@@ -47,18 +47,27 @@
                 perception of things and problem-solving. ^_^</p>
     </ul>
     </p>
-    <!--Links-->
+    <!--Links
+    Aqui eu vou colocar todos os meus links de referencia, como:
+    -LinkedIn
+    -Github
+    -Instagram
+    -Facebook
+    -Twitter
+    -YouTube-->
 
-
-    <!--Portfolio-->
+    <!--Portfolio
+    Aqui eu vou colocar todos os meus projetos do portfolio-->
 
 
     <!--SKills-->
 
-    <!--Programming Language-->
+    <!--Programming Language
+    Area para todas as linguagens de programação que tenho conhecimento-->
 
     
-    <!--Tools & Frameworks-->
+    <!--Tools & Frameworks
+    Area para todos os frameworks que tenho conhecimento-->
 
 
 
