--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>#1 Game JavaScript</title>
+    <link href="style.css" rel="stylesheet" type=text/css" />
+
 </head>
 
 <body>
