Atualização do código

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>#1 Game JavaScript</title>
-    <link href="style.css" rel="stylesheet" type=text/css" />
+    <link rel="stylesheet" href="style.css" />
 
 </head>
 
@@ -20,34 +20,40 @@
     <!--Presentation -->
     <p>
     <ul>
-    <li>
-        👨🏾‍🎓 I'm Neri, a games enthusiast on the journey to becoming a developer
-    </li>
-    <li>
-        📚 I'm currently learning JavaScript, Python.
-    </li>
-    <li>
-        🔭 I'm looking for my first job opportunity. My dream is to one day work
-        in game development.
-    </li>
-    <li>
-        📫 How to reach me contatoneri00@gmail.com.
-    </li>
+        <li>
+            👨🏾‍🎓 I'm Neri, a games enthusiast on the journey to becoming a developer
+        </li>
+        <li>
+            📚 I'm currently learning JavaScript, Python.
+        </li>
+        <li>
+            🔭 I'm looking for my first job opportunity. My dream is to one day work
+            in game development.
+        </li>
+        <li>
+            📫 How to reach me contatoneri00@gmail.com
+        </li>
 
         <!--Dropdown-->
         <details>
             <summary>
                 👨🏾‍💻 More about me
             </summary>
-            <p>I currently live in Brazil, love technology and I'm studying systems
-                development with the ultimate goal of developing games. I'm very
-                communicative and love working as part of a team, solving problems and
-                creating projects. I have a basic knowledge of English A1/A2, but I'm
-                passionate about languages and cultures and I want to learn and improve
-                more and more.</p>
-            <p>⚡ I enjoy reading, whether it's a good book, manga, or comics and playing
-                games! I believe that our personal interests contribute to a more refined
-                perception of things and problem-solving. ^_^</p>
+            <p>
+                <li>I currently live in Brazil, love technology and I'm studying systems
+                    I currently live in Brazil, love technology and I'm studying systems
+                    I currently live in Brazil, love technology and I'm studying systems
+                    development with the ultimate goal of developing games. I'm very
+                    communicative and love working as part of a team, solving problems and
+                    creating projects. I have a basic knowledge of English A1/A2, but I'm
+                    passionate about languages and cultures and I want to learn and improve
+                    more and more.</li>
+            </p>
+            <p>
+                <li>⚡ I enjoy reading, whether it's a good book, manga, or comics and playing
+                    games! I believe that our personal interests contribute to a more refined
+                    perception of things and problem-solving. ^_^</li>
+            </p>
     </ul>
     </p>
     <!--Links
@@ -68,7 +74,7 @@
     <!--Programming Language
     Area para todas as linguagens de programação que tenho conhecimento-->
 
-    
+
     <!--Tools & Frameworks
     Area para todos os frameworks que tenho conhecimento-->
 
